News item on Smart City Day 2016

--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -273,17 +273,17 @@
                 <div class="row row-summary">
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <h2>What's coming up?</h2>
-                    <h3>Earth Observation Information Day</h3>
+                    <h3>Smart City Day 2016</h3>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/content/logo_esa.png" alt="blog"/></center>
+                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/content/logo_scd16.png" alt="blog"/></center>
                   </div>
                 </div>
                 <div>
-                  <p>Boosting Earth Observation Innovation in Europe</p><p>SixSq is contributing to the future involvement of Switzerland in ESA Earth Observation Programmes via its participation in this workshop.
+                  <p>Innovative Solutions for Smart City Projects</p><p>Sign up for Smart City Day 2016 at Neuchâtel and find out what is happening in the field of Smart Cities.
                       </p>
                       <center>
-                            <a class="btn btn-primary btn-lg" role="button" href="/news">Learn more &raquo;</a>
+                            <a class="btn btn-primary btn-lg" role="button" href="news">Learn more &raquo;</a>
                         </center>
                       <center> <a /></a> </p>
                 </div>
