Update NuvlaBox image on SlipStream overview page

--- a/_layouts/article_slipstream_overview.html
+++ b/_layouts/article_slipstream_overview.html
@@ -61,7 +61,7 @@
                 <div class="col-md-6 col-2-text">
                     <h2>An Extensible Framework</h2>
                     <p>Take advantage of existing templates, such as load balancers, database clusters, Hadoop systems and more. But don't stop there, you can extend these and create your own. You can also take advantage of configuration management systems, such as Puppet, Chef and Ansible. What about Docker? It's also batteries included, with support for Docker and Docker Swarms.</p>
-                    <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/features">All clouds &raquo;</a></center>
+                    <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/features">Read all about it &raquo;</a></center>
                 </div>
                 <div class="col-md-6 col-2-image vertical-align">
                     <h2>
@@ -191,7 +191,7 @@
                 <div class="col-md-6 col-2-image">
                     <h2>
                         <center>
-                            <img src="/img/content/nuvlabox/photos/nb_front.png"></span>
+                            <img src="/img/content/nuvlabox/nuvlabox-v2.png"></span>
                         </center>
                     </h2>
                 </div>
