Add reference to Digital Marketplace to NuvlaBox overview page

--- a/_layouts/article_nuvlabox_overview.html
+++ b/_layouts/article_nuvlabox_overview.html
@@ -181,7 +181,8 @@ For most smaller organisations, the cost of a private cloud infrastructure is pr
                 Governments and Public Bodies
               </h2>
               <p>
-                Due to its simplicity, portability and flexibility, the NuvlaBox has countless uses in the field of education, medicine, field ops, critical infrastructure. Why not test us out and see if we can help you with your IT problem? 
+                Due to its simplicity, portability and flexibility, the NuvlaBox has countless uses in the field of education, medicine, field ops, critical infrastructure. Why not test us out and see if we can help you with your IT problem? NuvlaBox is now available on the UK's Digital Marketplace for public sector bodies.
+                <center><a class="btn btn-primary btn-lg" role="button" href="https://www.digitalmarketplace.service.gov.uk/g-cloud/services/859116332589109">Take a look &raquo;</a></center>
         			</p>
             </div>
           </div>
