Add All Clouds to SlipStream nav bar

--- a/_includes/slipstream_nav.html
+++ b/_includes/slipstream_nav.html
@@ -11,6 +11,7 @@
     <div id="sub-navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
         <li id="sub_overview"><a href="/products/slipstream">Overview</a></li>
+        <li id="sub_allclouds"><a href="/products/slipstream/cloud-connectors">All Clouds</a></li>
         <li id="sub_usecases"><a href="/products/slipstream/usecases">Use Cases</a></li>
         <li id="sub_features"><a href="/products/slipstream/features">Features</a></li>
         <li id="sub_techspecs"><a href="/products/slipstream/tech">Tech Specs</a></li>
