Update Latest Blog info on welcome page

--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -296,8 +296,8 @@
                 <div class="row row-summary">
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <h2>Latest blog</h2>
-                     <h3>How to Improve Security to Amazon Web Services</h3>
-                        <p>by Lionel Schaub</p>
+                     <h3>Demystifying Hyperconvergence</h3>
+                        <p>by Marc-Elian Bégin</p>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <center><img style="margin-top: 5px; max-width: 150px;" src="/img/design/blog_entries.png" alt="blog"/></center>
@@ -305,10 +305,10 @@
                 </div>
                 </div>
                 <p>
-                Find out to use AWS's best practises with SlipStream.
+                What are hyper converged solutions and why do we need them?
                 </p>
                 <center>
-                    <a class="btn btn-primary btn-lg" role="button" href="http://media.sixsq.com/blog/how-to-improve-security-to-amazon-web-services">Read it &raquo;</a>
+                    <a class="btn btn-primary btn-lg" role="button" href="http://media.sixsq.com/blog/demystifying-hyperconvergence">Read it &raquo;</a>
                 </center>
               </div>
             </div>
