Add Features and Tech Specs to Nuvla page

--- a/_includes/nuvla_nav.html
+++ b/_includes/nuvla_nav.html
@@ -11,6 +11,8 @@
     <div id="sub-navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
         <li id="sub_overview"><a href="/services/nuvla">Overview</a></li>
+        <li id="sub_features"><a href="/products/nuvla/features">Features</a></li>
+        <li id="sub_techspecs"><a href="/products/nuvla/tech">Tech Specs</a></li>
         <li id="sub_tryme"><a href="/services/nuvla/tryme">Try Me</a></li>
       </ul>
     </div>
