--- a/_includes/top.html
+++ b/_includes/top.html
@@ -14,7 +14,7 @@
     <div id="main-navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
         <li id="nav-products" class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Products <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Products & Services<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li role="menuitem">
               <a href="/products/slipstream"><b>SlipStream&reg;</b>: Multi-cloud management platform</a>
@@ -22,14 +22,20 @@
             <li>
               <a href="/products/nuvlabox"><b>NuvlaBox&reg;</b>: Cloud-in-a-box appliance</a>
             </li>
+            <li>
+            <a href="/services/nuvla"><b>Nuvla&trade;: </b> Online SlipStream&reg; managed by SixSq</a>
+            </li>
+            </li>
           </ul>
           <span></span>
         </li>
-        <li id="nav-services" class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Services <span class="caret"></span></a>
+        <li id="nav-solutions" class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Solutions <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="/services/nuvla"><b>Nuvla&trade;: </b> Online SlipStream&reg; managed by SixSq</a></li>
-            <li><a href="http://hnx.helix-nebula.eu"><b>Helix Nebula Marketplace</b>: Big science in the cloud</a></li>
+            <li><a href="http://sixsq.com/products/nuvlabox/usecases/#Smart-Cities"><b>Smart Cities</b>: Cyber Intrusion Solutions</a></li>
+            <li><a href="http://sixsq.com/products/nuvlabox/usecases/#Security-Installations"><b>Security Installations</b>: Surveillance, control, protection</a></li>
+            <li><a href="http://media.sixsq.com/it-for-education-in-remote-areas"><b>Education and e-learning</b>: Simple content delivery</a></li>
+            <li><a href="http://sixsq.com/products/nuvlabox/usecases/#Putting-Intelligence-at-the-Edge-of-the-Network"><b>Edge Computing</b>: Power at the edge of the network</a></li>
           </ul>
           <span></span>
         </li>
