--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -41,6 +41,10 @@
             </div>
             <br/>
             <div>
+              <a href="/legal">Terms and conditions</a>
+            </div>
+            <br/>
+            <div>
               SixSq is a member of the <a href="http://www.rheagroup.com" target="_blank">RHEA Group</a>.
             </div>
             <br/>
