--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -40,10 +40,10 @@
               <a href="mailto:support@sixsq.com">support@sixsq.com</a>
             </div>
             <br/>
-            <!--<div>
+            <div>
               <a href="/legal">Terms and conditions</a>
             </div>
-            <br/>-->
+            <br/>
             <div>
               SixSq is a member of the <a href="http://www.rheagroup.com" target="_blank">RHEA Group</a>.
             </div>
