--- a/_includes/top.html
+++ b/_includes/top.html
@@ -79,7 +79,7 @@
             <li><a href="/contact">Contact</a></li>
             <li><a href="/customers">Customers</a><span></span></li>
             <li><a href="/jobs">Jobs</a><span></span></li>
-            <!--<li><a href="/legal">Terms</a><span></span></li>-->
+            <li><a href="/legal">Terms</a><span></span></li>
           </ul>
           <span></span>
         </li>
