Correct link to ssdocs latest

--- a/_includes/top.html
+++ b/_includes/top.html
@@ -62,7 +62,7 @@
 			            <ul class="multi-column-dropdown">
                     <li><!--<a href="/resources/for-developers/overview">--><strong>For Developers</strong><!--</a>--></li>
                     <li><a href="http://ssdocs.sixsq.com/en/latest/advanced_tutorial/index.html">Tutorials</a></li>
-                    <li><a href="http://ssdocs.sixsq.com/">Documentation</a></li>
+                    <li><a href="http://ssdocs.sixsq.com/en/latest/">Documentation</a></li>
                     <li><a href="http://ssapi.sixsq.com/">API</a></li>
                     <li><a href="http://ssdocs.sixsq.com/en/latest/administrator_guide/quick_installation.html">Install SlipStream</a></li>
                     <li><a href="http://support.sixsq.com/">Support</a></li>
