Update news on welcome page, add The Business Debate video & news item on partner website

--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -151,83 +151,31 @@
           </div>
       </div>
     </div>
-
-<!--
-
-
-<div class="jumbotron">
-  <div class="container">
-      <h2>Our solutions</h2>
-      <div class="row row-summary row-summary-sixsq">
-        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-          <div>
-            <div>
-              <center>
-                <h2>
-                    Smart City Sensor Aggregation
-                </h2>
-              </center>
-              <ul>
-                <li>Increase cyber security</li>
-                <li>Reduce network usage</li>
-                <li>Remote control your infrastructure</li>
-                <strong><li>Massive maintenance and operation savings!</li></strong>
-              </ul>
-            </div>
-            <center>
-              <a class="btn btn-primary btn-lg" role="button" href="/products/slipstream">Learn more &raquo;</a>
-            </center>
+	
+  	<div class="jumbotron">
+      <div class="container">
+          <h2>Start your Digital Transformation</h2>
+          <div style="background-color: white; padding: 20px">
+              <div style="padding-bottom: 20px;" class="row row-summary">
+                  <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
+                    <center>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/xnpvkLW_VMc" frameborder="0" allowfullscreen></iframe>
+                    </center>
+                  </div>
+                  <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
+                    <h2>Digital transformation means embracing the cloud</h2>
+                    <p>Adopting cloud technologies involves many challenges but cloud is the only proven technology able to deliver the innovation, efficiency and agility necessary to drive modern businesses. Hear what SixSq co-founders have to say about it and find out how to avoid the pitfalls of the digital transformation journey.</p>
+	                <center>
+	                    <a class="btn btn-primary btn-lg" role="button" href="http://thebusinessdebate.com/sixsq-digital-transformation-means-embracing-the-cloud/">Read more &raquo;</a>
+	                </center>
+                  </div>
+              </div>
+              
           </div>
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-          <div>
-            <div>
-              <center>
-                <h2>
-                  Smart Cloud Brokerage 
-                </h2>
-              </center>
-              <ul>
-                <li>1 Dashboard</li>
-                <li>1 Contract</li>
-                <li>1 Bill</li>
-                <strong><li>All the clouds you want, at scale!</li></strong>
-              </ul>
-            </div>
-            <center>
-                <a class="btn btn-primary btn-lg" role="button" href="/products/nuvlabox">Discover &raquo;</a>
-            </center>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-          <div>
-            <div>
-              <center>
-                <h2>
-                  Smart Hybrid Cloud Solution 
-                </h2>
-              </center>
-              <ul>
-                <li>Bring together private and public clouds</li>
-                <li>Move apps seamlessly between clouds</li>
-                <li>Unique user experience</li>
-                <strong><li>Offer choice, hide complexity!</li></strong>
-              </ul>
-            </div>
-            <center>
-                <a class="btn btn-primary btn-lg" role="button" href="/services/nuvla">Read it &raquo;</a>
-            </center>
-          </div>
-        </div>
       </div>
     </div>
-  </div>
-</div>
 
-
-
--->
-
+   
 
     <div class="jumbotron quotes">
       <div class="container">
@@ -273,14 +221,14 @@
                 <div class="row row-summary">
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <h2>What's coming up?</h2>
-                    <h3>Smart City Day 2016</h3>
+                    <h3>SixSq Partner Website</h3>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/content/logo_scd16.png" alt="blog"/></center>
+                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/design/news_box.png" alt="blog"/></center>
                   </div>
                 </div>
                 <div>
-                  <p>Innovative Solutions for Smart City Projects</p><p>Sign up for Smart City Day 2016 at Neuchâtel and find out what is happening in the field of Smart Cities.
+                  <p>A new website for resellers, distributors and referrers will soon be available. </p><p>Grow your business exponentially by adding cloud solutions to your portfolio.
                       </p>
                       <center>
                             <a class="btn btn-primary btn-lg" role="button" href="news">Learn more &raquo;</a>
@@ -305,7 +253,7 @@
                 </div>
                 </div>
                 <p>
-                What are hyper converged solutions and why do we need them?
+                What are hyper converged solutions and why do we need them? Is hyper convergence just a trend? 
                 </p>
                 <center>
                     <a class="btn btn-primary btn-lg" role="button" href="http://media.sixsq.com/blog/demystifying-hyperconvergence">Read it &raquo;</a>
