--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -224,7 +224,7 @@
                     <h3>SixSq Partner Website</h3>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/design/news_box.png" alt="blog"/></center>
+                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/design/news.png" alt="blog"/></center>
                   </div>
                 </div>
                 <div>
