Fix video layout for phone size

--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -156,11 +156,11 @@
       <div class="container">
           <h2>Start your Digital Transformation</h2>
           <div style="background-color: white; padding: 20px">
-              <div style="padding-bottom: 20px;" class="row row-summary">
-                  <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
-                    <center>
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/xnpvkLW_VMc" frameborder="0" allowfullscreen></iframe>
-                    </center>
+              <div class="row">
+                  <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12 container spacy">
+					  <div class="embed-responsive embed-responsive-16by9">
+                          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/xnpvkLW_VMc" frameborder="0" allowfullscreen></iframe>
+					  </div>
                   </div>
                   <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
                     <h2>Digital transformation means embracing the cloud</h2>
@@ -169,13 +169,10 @@
 	                    <a class="btn btn-primary btn-lg" role="button" href="http://thebusinessdebate.com/sixsq-digital-transformation-means-embracing-the-cloud/">Read more &raquo;</a>
 	                </center>
                   </div>
-              </div>
-              
+              </div>              
           </div>
       </div>
     </div>
-
-   
 
     <div class="jumbotron quotes">
       <div class="container">
