--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -21,7 +21,11 @@
     {% if page.category == "r-and-d" %}
       {% include r-and-d.html %}
     {% else %}
-      {% include media_nav.html %}
+      {% if page.category == "jobs" %}
+        {% include jobs.html %}
+      {% else %}
+        {% include media_nav.html %}
+      {% endif %}
     {% endif %}
     <div class="jumbotron">
       <div class="container">
