--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -38,12 +38,12 @@
             </div>
             <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
               <center>
-                <a href="/contact/#contact-us-form" class="btn btn-primary btn-lg banner-message">
+                <a href="/jobs" class="btn btn-primary btn-lg banner-message">
                   <h4>
-                  Questions?
+                  We are hiring!
                   </h4>
                   <h5>
-                  Contact Us!
+                  Apply here!
                   </h5>
                 </a>
               </center>
