--- a/_includes/resources_nav.html
+++ b/_includes/resources_nav.html
@@ -10,7 +10,7 @@
     </div>
     <div id="sub-navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li id="sub_product_descriptions"><a href="/product_descriptions">Product Descriptions</a></li>
+        <li id="sub_portfolio"><a href="/products_and_services">Portfolio Overview</a></li>
         <li id="sub_blog"><a href="http://media.sixsq.com/blog">Blog</a></li>
         <li id="sub_news"><a href="/news">News</a></li>
         <li id="sub_videos"><a href="/videos">Videos</a></li>
