--- a/_includes/top.html
+++ b/_includes/top.html
@@ -46,7 +46,7 @@
 		            <div class="col-sm-6">
 			            <ul class="multi-column-dropdown">
                     <li><!--<a href="/resources/for-all/overview">--><strong>For Everyone</strong><!--</a>--></li>
-                    <li><a href="/product_descriptions">Product Descriptions</a></li>
+                    <li><a href="/products_and_services">Porfolio Overview</a></li>
                     <li><a href="http://media.sixsq.com/blog">Blog</a></li>
                     <li><a href="/news">News</a></li>
                     <li><a href="/videos">Videos</a></li>
