--- a/_includes/nuvla_nav.html
+++ b/_includes/nuvla_nav.html
@@ -10,10 +10,10 @@
     </div>
     <div id="sub-navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li id="sub_overview"><a href="/services/nuvla">Overview</a></li>
-        <li id="sub_features"><a href="/products/nuvla/features">Features</a></li>
-        <li id="sub_techspecs"><a href="/products/nuvla/tech">Tech Specs</a></li>
-        <li id="sub_tryme"><a href="/services/nuvla/tryme">Try Me</a></li>
+        <li id="sub_overview"><a href="/services/nuvla/">Overview</a></li>
+        <li id="sub_features"><a href="/services/nuvla/features/">Features</a></li>
+        <li id="sub_techspecs"><a href="/services/nuvla/tech/">Tech Specs</a></li>
+        <li id="sub_tryme"><a href="/services/nuvla/tryme/">Try Me</a></li>
       </ul>
     </div>
   </div>
