--- a/_includes/nuvlabox_nav.html
+++ b/_includes/nuvlabox_nav.html
@@ -10,10 +10,10 @@
     </div>
     <div id="sub-navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li id="sub_overview"><a href="/products/nuvlabox">Overview</a></li>
-        <li id="sub_usecases"><a href="/products/nuvlabox/usecases">Use Cases</a></li>
-        <li id="sub_features"><a href="/products/nuvlabox/features">Features</a></li>
-        <li id="sub_techspecs"><a href="/products/nuvlabox/tech">Tech Specs</a></li>
+        <li id="sub_overview"><a href="/products/nuvlabox/">Overview</a></li>
+        <li id="sub_usecases"><a href="/products/nuvlabox/usecases/">Use Cases</a></li>
+        <li id="sub_features"><a href="/products/nuvlabox/features/">Features</a></li>
+        <li id="sub_techspecs"><a href="/products/nuvlabox/tech/">Tech Specs</a></li>
       </ul>
     </div>
   </div>
