--- a/_includes/legal_nav.html
+++ b/_includes/legal_nav.html
@@ -11,8 +11,8 @@
     <div id="sub-navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
         <li id="sub_overview"><a href="/legal/index.html">Overview</a></li>
-        <li id="sub_general-terms"><a href="/legal/general-terms">General Terms</a></li>
-        <li id="sub_eula"><a href="/legal/eula">EULA</a></li>
+        <li id="sub_general-terms"><a href="/legal/general-terms/">General Terms</a></li>
+        <li id="sub_eula"><a href="/legal/eula/">EULA</a></li>
       </ul>
     </div>
   </div>
