--- a/_includes/r-and-d_nav.html
+++ b/_includes/r-and-d_nav.html
@@ -10,7 +10,7 @@
     </div>
     <div id="sub-navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li id="sub_overview" {% if page.class == 'overview' %}class="active"{% endif %}><a href="/r-and-d">Overview</a></li>
+        <li id="sub_overview" {% if page.class == 'overview' %}class="active"{% endif %}><a href="/r-and-d/">Overview</a></li>
       </ul>
     </div>
   </div>
