--- a/_includes/right.html
+++ b/_includes/right.html
@@ -2,10 +2,10 @@
   <a href="{{ post.url }}">
     <h2>{{ post.title }}</h2>
   </a>
-  {% if post.category == 'news' %}
+  <p>{{ post.content | strip_html | truncatewords: 25 }}<a href="{{ post.url }}"> read more</a></p>
+  {% if post.class == 'news' %}
     <div class="date">{{ post.date | date: "%d %B %Y" }}</div>
   {% endif %}
-  <p>{{ post.content | strip_html | truncatewords: 25 }}<a href="{{ post.url }}"> read more</a></p>
   {% if post.author %}
     <p/>
     <div class="author">By: {{ post.author }}</div>
