Update what’s coming up and next training on welcome page

--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -218,14 +218,14 @@
                 <div class="row row-summary">
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <h2>What's coming up?</h2>
-                    <h3>SixSq Partner Website</h3>
+                    <h3>SixSq at CEBIT</h3>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/design/news.png" alt="blog"/></center>
+                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/content/logo_CEBIT_2017.png" alt="blog"/></center>
                   </div>
                 </div>
                 <div>
-                  <p>A new website for resellers, distributors and referrers will soon be available. </p><p>Grow your business exponentially by adding cloud solutions to your portfolio.
+                  <p>SixSq is presenting its innovative solutions as part of the EC Pavilion at CEBIT, the global event for digital business.</p><p>Find us in Hall 8, Stand EO1.
                       </p>
                       <center>
                             <a class="btn btn-primary btn-lg" role="button" href="news">Learn more &raquo;</a>
@@ -240,20 +240,21 @@
               <div>
                 <div class="row row-summary">
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <h2>Latest blog</h2>
-                     <h3>Demystifying Hyperconvergence</h3>
-                        <p>by Marc-Elian Bégin</p>
+                    <h2>Next Training Event</h2>
+                     <h3>Discover 
+					 Smart Edge Computing Solutions</h3>
+                        <p>with SixSq</p>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/design/blog_entries.png" alt="blog"/></center>
+                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/design/nuvlabox_logo.png" alt="blog"/></center>
                   </div>
                 </div>
                 </div>
                 <p>
-                What are hyper converged solutions and why do we need them? Is hyper convergence just a trend? 
+                Find out more about Edge Computing Solutions and enjoy a hands-on training experience.
                 </p>
                 <center>
-                    <a class="btn btn-primary btn-lg" role="button" href="http://media.sixsq.com/blog/demystifying-hyperconvergence">Read it &raquo;</a>
+                    <a class="btn btn-primary btn-lg" role="button" href="http://sixsq.com/resources/2017/03/07/news-nuvlabox-training-april-2017.html">Sign Up &raquo;</a>
                 </center>
               </div>
             </div>
