--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -218,17 +218,17 @@
                 <div class="row row-summary">
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <h2>What's coming up?</h2>
-                    <h3>SixSq at CEBIT</h3>
+                    <h3>IoT Week 2017</h3>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/content/logo_CEBIT_2017.png" alt="blog"/></center>
+                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/content/logo_iot-week.png" alt="blog"/></center>
                   </div>
                 </div>
                 <div>
-                  <p>SixSq is presenting its innovative solutions as part of the EC Pavilion at CEBIT, the global event for digital business.</p><p>Find us in Hall 8, Stand EO1.
+                  <p>The 7th Internet of Things Week in Geneva will cover all the latest developments in the IoT domain.</p><p>Join our Hackathon!
                       </p>
                       <center>
-                            <a class="btn btn-primary btn-lg" role="button" href="news">Learn more &raquo;</a>
+                            <a class="btn btn-primary btn-lg" role="button" href="https://sites.grenadine.co/sites/iot/en/iot-week-2017">Learn more &raquo;</a>
                         </center>
                       <center> <a /></a> </p>
                 </div>
@@ -243,7 +243,7 @@
                     <h2>Next Training Event</h2>
                      <h3>Discover 
 					 Smart Edge Computing Solutions</h3>
-                        <p>with SixSq</p>
+                        <H2>SOLD OUT</H2>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <center><img style="margin-top: 5px; max-width: 150px;" src="/img/design/nuvlabox_logo.png" alt="blog"/></center>
@@ -254,7 +254,7 @@
                 Find out more about Edge Computing Solutions and enjoy a hands-on training experience.
                 </p>
                 <center>
-                    <a class="btn btn-primary btn-lg" role="button" href="http://sixsq.com/resources/2017/03/07/news-nuvlabox-training-april-2017.html">Sign Up &raquo;</a>
+                    <a class="btn btn-primary btn-lg" role="button" href="http://sixsq.com/resources/2017/03/07/news-nuvlabox-training-april-2017.html">Look out for next dates &raquo;</a>
                 </center>
               </div>
             </div>
