Update some key words on NuvlaBox pitch and overview

--- a/_includes/nuvlabox_pitch.html
+++ b/_includes/nuvlabox_pitch.html
@@ -12,7 +12,7 @@
             <h2>Private cloud for SMEs</h2>
             <ul>
               <li>Affordable entry point to cloud</li>
-              <li>Sets up in seconds, runs forever</li>
+              <li>Sets up in seconds, no IT expert needed</li>
               <li>Remote management and update of apps</li>
             </ul>
           </div>
@@ -32,14 +32,14 @@
               <center>
                 <span class="glyphicon glyphicon-hdd"></span>
                 <span style="color: gray; font-size: 48px;">+</span>
-                <span style="color: #CF2121" class="glyphicon glyphicon-grain" aria-hidden="true"></span>
+                <span style="color: #CF2121" class="glyphicon glyphicon-home" aria-hidden="true"></span>
               </center>
             </h2>
-            <h2>Rapid IT for field operations</h2>
+            <h2>Smart City Solution</h2>
             <ul>
-              <li>Simple, quick set up makes NuvlaBox ideal for IT operations in field or outpost </li>
-              <li>Apps and content delivered using a number of IP links (e.g. land, satellites, air)</li>
-              <li>Ruggedised casing and fanless design provide increased operational lifespan</li>
+              <li>Cyber Intrusion Detection</li>
+              <li>Data storage and processing at the Edge of the Network</li>
+              <li>Reliable local connectivity</li>
             </ul>
           </div>
           <center><a class="btn btn-primary btn-lg" role="button" href="/products/nuvlabox/usecases/#Field-Operations-with-Agile-Local-Infrastructure">Learn more &raquo;</a></center>
