--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -89,10 +89,10 @@
                     </h2>
                   </center>
                   <ul>
-                    <li>Simple IT solution</li>
+                    <li>Ideal for IoT & Smart City projects</li>
                     <li>Private and secure cloud</li>
-                    <li>Plug and play</li>
-                    <li>Remote management and application update</li>
+                    <li>Edge Computing Solution</li>
+                    <li>Remote management & application update capabilities</li>
                   </ul>
                 </div>
                 <center>
