Use correct link to avoir redirects

--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -75,7 +75,7 @@
                     </ul>
                   </div>
                   <center>
-                      <a class="btn btn-primary btn-lg" role="button" href="/services/nuvla">Read it &raquo;</a>
+                      <a class="btn btn-primary btn-lg" role="button" href="/services/nuvla/">Read it &raquo;</a>
                   </center>
                 </div>
             </div>
@@ -96,7 +96,7 @@
                   </ul>
                 </div>
                 <center>
-                    <a class="btn btn-primary btn-lg" role="button" href="/products/nuvlabox">Discover &raquo;</a>
+                    <a class="btn btn-primary btn-lg" role="button" href="/products/nuvlabox/">Discover &raquo;</a>
                 </center>
               </div>
             </div>
@@ -118,7 +118,7 @@
                   </ul>
                 </div>
                 <center>
-                  <a class="btn btn-primary btn-lg" role="button" href="/products/slipstream">Learn more &raquo;</a>
+                  <a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/">Learn more &raquo;</a>
                 </center>
               </div>
             </div>
