News item on EO workshop at EPFL 4 May 2017

--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -240,21 +240,19 @@
               <div>
                 <div class="row row-summary">
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <h2>Next Training Event</h2>
-                     <h3>Discover 
-					 Smart Edge Computing Solutions</h3>
-                        <H2>SOLD OUT</H2>
+                    <h2>Next Event</h2>
+                     <h3>Swiss Innovation Platform for Earth Observation (EO) Data Processing</h3>
+                        <H2>By Invitation Only</H2>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/design/nuvlabox_logo.png" alt="blog"/></center>
+                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/content/EO-workshop.jpg" alt="blog"/></center>
                   </div>
                 </div>
                 </div>
                 <p>
-                Find out more about Edge Computing Solutions and enjoy a hands-on training experience.
-                </p>
-                <center>
-                    <a class="btn btn-primary btn-lg" role="button" href="http://sixsq.com/resources/2017/03/07/news-nuvlabox-training-april-2017.html">Look out for next dates &raquo;</a>
+                SixSq is organising a workshop to leverage Swiss expertise in the field of Earth Observation. Get in touch for your personal invitation!</p>
+                <center>  
+                    <a class="btn btn-primary btn-lg" role="button" href="http://sixsq.com/resources/2017/04/25/news-EO-workshop.html">Read more &raquo;</a>
                 </center>
               </div>
             </div>
