Update AAI privacy policy

--- a/_includes/legal_nav.html
+++ b/_includes/legal_nav.html
@@ -13,6 +13,7 @@
         <li id="sub_overview"><a href="/legal/index.html">Overview</a></li>
         <li id="sub_general-terms"><a href="/legal/general-terms">General Terms</a></li>
         <li id="sub_eula"><a href="/legal/eula">EULA</a></li>
+        <li id="sub_eula"><a href="/legal/privacy">AAI Privacy</a></li>
       </ul>
     </div>
   </div>
