Update What’s next and Latest Blog on welcome page

--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -218,17 +218,17 @@
                 <div class="row row-summary">
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <h2>What's coming up?</h2>
-                    <h3>IoT Week 2017</h3>
+                    <h2>IoT Week 2017</h2>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <center><img style="margin-top: 5px; max-width: 150px;" src="/img/content/logo_iot-week.png" alt="blog"/></center>
                   </div>
                 </div>
                 <div>
-                  <p>The 7th Internet of Things Week in Geneva will cover all the latest developments in the IoT domain.</p><p>Join our Hackathon!
+                  <p>Join us at IoT Week in Geneva from 6th to 9th June and discover emerging technologies and solutions in the Internet of Things domain.</p><p>SixSq presenting CityZen success with energy savings from smart street lighting. Hackathons, demos and more!
                       </p>
                       <center>
-                            <a class="btn btn-primary btn-lg" role="button" href="https://sites.grenadine.co/sites/iot/en/iot-week-2017">Learn more &raquo;</a>
+                            <a class="btn btn-primary btn-lg" role="button" href="http://sixsq.com/resources/2017/05/26/news-IoT-week-june-2017.html">Learn more &raquo;</a>
                         </center>
                       <center> <a /></a> </p>
                 </div>
@@ -240,19 +240,18 @@
               <div>
                 <div class="row row-summary">
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <h2>Next Event</h2>
-                     <h3>Swiss Innovation Platform for Earth Observation (EO) Data Processing</h3>
-                        <H2>By Invitation Only</H2>
+                    <h2>Latest Blog</h2>
+                     <h2>What is Edge Computing?</h2>
+                        <h3>By Marc-Elian Bégin</h3>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/content/EO-workshop.jpg" alt="blog"/></center>
+                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/content/Globe_connected_cities.jpg" alt="blog"/></center>
                   </div>
                 </div>
                 </div>
-                <p>
-                SixSq is organising a workshop to leverage Swiss expertise in the field of Earth Observation. Get in touch for your personal invitation!</p>
+                <p>Edge Computing is the latest buzz in the ICT world. Find out what it's all about and why transforming data at the edge is so important. </p>
                 <center>  
-                    <a class="btn btn-primary btn-lg" role="button" href="http://sixsq.com/resources/2017/04/25/news-EO-workshop-may-2017.html">Read more &raquo;</a>
+                    <a class="btn btn-primary btn-lg" role="button" href="http://media.sixsq.com/blog/what-is-edge-computing">Read more &raquo;</a>
                 </center>
               </div>
             </div>
