Remove We’re Hiring from welcome page & update jobs page

--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -38,13 +38,15 @@
             </div>
             <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
               <center>
-                <a href="/jobs" class="btn btn-primary btn-lg banner-message">
+				  
+                <!--<a href="/jobs" class="btn btn-primary btn-lg banner-message">
                   <h4>
                   We are hiring!
                   </h4>
                   <h5>
                   Apply here!
-                  </h5>
+                  </h5>-->
+					
                 </a>
               </center>
             </div>
