--- a/_layouts/job_index.html
+++ b/_layouts/job_index.html
@@ -14,15 +14,19 @@
     <div class="{% cycle 'even', 'odd' %} spacy">
       <div class="container big">
         <center>
-        <a href="{{ post.url }}">
+     <a href="{{ post.url }}">
           <img src="{{ post.image }}" />
         </a>
-        <p/>
+        <p/>-->
         </center>
         <h2>
           <a href="{{ post.url }}" class="title">{{ post.title }}</a>
         </h2>
-        <p>{{ post.content | strip_html | truncatewords: 25 }}<a href="{{ post.url }}"> read more</a></p>
+        <p>{{ post.content | strip_html | truncatewords: 25 }}</p>
+		
+		<!--<a href="{{ post.url }}"> 
+			read more</a>-->
+			
         <div class="date">{{ post.date | date: "%d %B %Y" }}</div>
       </div>
     </div>
