--- a/_layouts/job_index.html
+++ b/_layouts/job_index.html
@@ -3,6 +3,7 @@
    {% include head.html %}
   <body>
    {% include top.html %}
+   {% include {{ page.category }}_nav.html %}
 
   <div class="jumbotron">
     <div class="container">
@@ -17,7 +18,7 @@
      <a href="{{ post.url }}">
           <img src="{{ post.image }}" />
         </a>
-        <p/>-->
+        <p/>
         </center>
         <h2>
           <a href="{{ post.url }}" class="title">{{ post.title }}</a>
