--- a/_layouts/plain.html
+++ b/_layouts/plain.html
@@ -3,7 +3,8 @@
   {% include head.html %}
   <body>
     {% include top.html %}
-
+    {% include {{ page.category }}_nav.html %}
+	
     {{ page.content | markdownify }}
 
     {% include footer.html %}
