--- a/_layouts/simple.html
+++ b/_layouts/simple.html
@@ -3,6 +3,7 @@
   {% include head.html %}
   <body>
     {% include top.html %}
+    {% include {{ page.category }}_nav.html %}
 
     <div class="jumbotron">
       <div class="container spacy">
