Changes to NuvlaBox use case page. Change of style & include smart lighting reference

--- a/_includes/nuvlabox_intro.html
+++ b/_includes/nuvlabox_intro.html
@@ -16,7 +16,7 @@
     {% if page.summary %}
       <p>{{ page.summary }}</p>
     {% else %}
-      <p>A simple and secure private cloud solution which offers easy and affordable access to the benefits of cloud computing.</p>
+      <p>Delivering savings with a simple and secure private cloud solution. Reduce operational costs. Improve efficiency.</p>
     {% endif %}
   </div>
 </div>
