--- a/_includes/top.html
+++ b/_includes/top.html
@@ -17,13 +17,13 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Products &amp; Services<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li role="menuitem">
-              <a href="/products/slipstream"><b>SlipStream&reg;</b>: Multi-cloud management platform</a>
+              <a href="/products/slipstream"><b>SlipStream&reg;</b>: Smart cloud application management</a>
             </li>
             <li>
-              <a href="/products/nuvlabox"><b>NuvlaBox&reg;</b>: Cloud-in-a-box appliance</a>
+              <a href="/products/nuvlabox"><b>NuvlaBox&reg;</b>: Smart Cloud-in-a-box Appliance</a>
             </li>
             <li>
-            <a href="/services/nuvla"><b>Nuvla&trade;</b>: Online SlipStream&reg; managed by SixSq</a>
+            <a href="/services/nuvla"><b>Nuvla&trade;</b>: Smart Cloud Brokerage</a>
             </li>
             </li>
           </ul>
