--- a/_layouts/usecases_index.html
+++ b/_layouts/usecases_index.html
@@ -8,7 +8,7 @@
 
   {% include {{ page.category }}_intro.html %}
 
-  <div class="jumbotron">
+  <!-- <div class="jumbotron">
     <div class="container big spacy">
       <div class="row row-summary-{{ page.category }}-usecases row-summary">
       {% for post in site.posts %}
@@ -22,7 +22,7 @@
               </p>
             </div>
             <center>
-              <a class="btn btn-primary btn-lg" href="#{{ post.title | replace:' ','-' }}" role="button">Use case details &raquo;</a>
+              <a class="btn btn-primary btn-lg" href="#{{ post.title | replace:' ','-' }}" role="button">Read more &raquo;</a>
             </center>
           </div>
         </div>
@@ -30,18 +30,13 @@
       {% endfor %}
       </div>
     </div>
-  </div>
+  </div> -->
 
   {% for post in site.posts %}
     {% if post.category == page.category and post.class == 'usecases' %}
     <div class="{{ post.class }} {% cycle 'even', 'odd' %}">
       <div id="{{ post.title | replace:' ','-' }}" class="anchor"></div>
       <div class="container spacy">
-        <h1>
-          <a href="{{ post.url }}">{{ post.title }}</a>
-        </h1>
-        <h4>Context: {{ post.context }}</a></h4>
-
         {% if post.image %}
           <div class="row">
           {% capture thecycle %}{% cycle 'odd', 'even' %}{% endcapture %}
