Update what’s next

--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -220,17 +220,16 @@
                 <div class="row row-summary">
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <h2>What's coming up?</h2>
-                    <h2>IoT Week 2017</h2>
+                    <h2>Swiss Space Industry Days</h2>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/content/logo_iot-week.png" alt="blog"/></center>
+                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/content/space.jpeg" alt="blog"/></center>
                   </div>
                 </div>
                 <div>
-                  <p>Join us at IoT Week in Geneva from 6th to 9th June and discover emerging technologies and solutions in the Internet of Things domain.</p><p>SixSq presenting CityZen success with energy savings from smart street lighting. Hackathons, demos and more!
-                      </p>
+                  <p>Challenges and Opportunities in the era of New Space. Get the latest nformation on various European Space programs and exchange experiences on the fast changing space landscape.</p>
                       <center>
-                            <a class="btn btn-primary btn-lg" role="button" href="http://sixsq.com/resources/2017/05/26/news-IoT-week-june-2017.html">Learn more &raquo;</a>
+                            <a class="btn btn-primary btn-lg" role="button" href="https://www.b2match.eu/ssid2017">Learn more &raquo;</a>
                         </center>
                       <center> <a /></a> </p>
                 </div>
