Add Partners to nav bar and add partner page

--- a/_includes/about_nav.html
+++ b/_includes/about_nav.html
@@ -13,6 +13,7 @@
         <li id="sub_about_us"><a href="/about-us">About Us</a></li>
         <li id="sub_contact"><a href="/contact">Contact</a></li>
         <li id="sub_customers"><a href="/customers">Customers</a></li>
+		<li id="sub_partners"><a href="/partners">Partners</a></li>
         <li id="sub_jobs"><a href="/jobs">Jobs</a></li>
         <li id="sub_legal"><a href="/legal">Terms</a></li>
       </ul>
