--- a/_includes/top.html
+++ b/_includes/top.html
@@ -75,6 +75,7 @@
             <li><a href="/about-us">About Us</a></li>
             <li><a href="/contact">Contact</a></li>
             <li><a href="/customers">Customers</a><span></span></li>
+			<li><a href="/partners">Partners</a><span></span></li>
             <li><a href="/jobs">Jobs</a><span></span></li>
             <li><a href="/legal">Terms</a><span></span></li>
           </ul>
